--- a/adynamics3/css2/style.css
+++ b/adynamics3/css2/style.css
@@ -333,11 +333,12 @@ body {
   color: var(--rich-black-fogra-29-1);
 }
 
-.hero-container .btn-group {
+.btn-group {
   margin-block-start: 40px;
+  z-index: 9999;
 }
 
-.hero-container .btn-icon {
+.btn-icon {
   background-color: var(--go-green);
   color: var(--white);
   font-size: 20px;
@@ -355,7 +356,7 @@ body {
   }
 }
 
-.hero-container .flex-btn .span {
+.btn-group .flex-btn .span {
   color: var(--go-green);
   font-size: var(--fs-9);
   font-weight: var(--fw-600);
@@ -975,7 +976,7 @@ body {
     margin-inline: 25px 0;
   }
 
-  .hero-container .btn-group {
+ .btn-group {
     justify-content: flex-start;
   }
 
@@ -1126,7 +1127,7 @@ body {
 }
 @media only screen and (max-width: 575px) {
   .single-timeline-area .timeline-date {
-    width: 100px;
+    width: 120px;
   }
 }
 .single-timeline-area .timeline-date::after {
@@ -1136,7 +1137,7 @@ body {
   content: "";
   background-color: #ebebeb;
   top: 0;
-  right: 30px;
+  right: 40px;
   z-index: 1;
 }
 .single-timeline-area .timeline-date::before {
@@ -1147,7 +1148,7 @@ body {
   background-color: #49aaaa;
   content: "";
   top: 50%;
-  right: 26px;
+  right: 35px;
   z-index: 5;
   margin-top: -5.5px;
 }
@@ -1157,6 +1158,13 @@ body {
   font-size: 13px;
   text-transform: uppercase;
   font-weight: 500;
+}
+
+@media (max-width: 575px) {
+  .single-timeline-area .timeline-date p {
+    font-size: 0.8em;
+  }
+  
 }
 .single-timeline-area .single-timeline-content {
   position: relative;
@@ -1423,8 +1431,6 @@ body {
   opacity: 1;
 }
 
-
-
 @media (max-width: 991.98px) {
   .button-container {
     width: 126px;
@@ -1460,151 +1466,235 @@ body {
   }
 }
 
+/*---------------- Cloud Animations -------------------*/
+#background-wrap {
+  height: auto;
+  bottom: 0;
+  left: 0;
+  padding-top: 50px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: -2;
+  overflow: hidden;
+}
 
-    #background-wrap {
+@keyframes animateCloud {
+  0% {
+    margin-left: -1000px;
+  }
+  100% {
+    margin-left: 100%;
+  }
+}
+
+.x1 {
+  -webkit-animation: animateCloud 35s linear infinite;
+  -moz-animation: animateCloud 35s linear infinite;
+  animation: animateCloud 35s linear infinite;
+
+  -webkit-transform: scale(0.65);
+  -moz-transform: scale(0.65);
+  transform: scale(0.65);
+}
+
+.x2 {
+  -webkit-animation: animateCloud 20s linear infinite;
+  -moz-animation: animateCloud 20s linear infinite;
+  animation: animateCloud 20s linear infinite;
+
+  -webkit-transform: scale(0.3);
+  -moz-transform: scale(0.3);
+  transform: scale(0.3);
+}
+
+.x3 {
+  -webkit-animation: animateCloud 30s linear infinite;
+  -moz-animation: animateCloud 30s linear infinite;
+  animation: animateCloud 30s linear infinite;
+
+  -webkit-transform: scale(0.5);
+  -moz-transform: scale(0.5);
+  transform: scale(0.5);
+}
+
+.x4 {
+  -webkit-animation: animateCloud 18s linear infinite;
+  -moz-animation: animateCloud 18s linear infinite;
+  animation: animateCloud 18s linear infinite;
+
+  -webkit-transform: scale(0.4);
+  -moz-transform: scale(0.4);
+  transform: scale(0.4);
+}
+
+
+.cloud {
+  background: #fff;
+  background: -moz-linear-gradient(top, #fff 5%, #f1f1f1 100%);
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(5%, #fff),
+    color-stop(100%, #f1f1f1)
+  );
+  background: -webkit-linear-gradient(top, #fff 5%, #f1f1f1 100%);
+  background: -o-linear-gradient(top, #fff 5%, #f1f1f1 100%);
+  background: -ms-linear-gradient(top, #fff 5%, #f1f1f1 100%);
+  background: linear-gradient(top, #fff 5%, #f1f1f1 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff', endColorstr='#f1f1f1',GradientType=0 );
+
+  -webkit-border-radius: 100px;
+  -moz-border-radius: 100px;
+  border-radius: 100px;
+
+  -webkit-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
+
+  height: 120px;
+  position: relative;
+  width: 350px;
+}
+
+.cloud:after,
+.cloud:before {
+  background: #fff;
+  content: "";
+  position: absolute;
+  z-index: -1;
+}
+
+.cloud:after {
+  -webkit-border-radius: 100px;
+  -moz-border-radius: 100px;
+  border-radius: 100px;
+
+  height: 100px;
+  left: 50px;
+  top: -50px;
+  width: 100px;
+}
+
+.cloud:before {
+  -webkit-border-radius: 200px;
+  -moz-border-radius: 200px;
+  border-radius: 200px;
+
+  width: 180px;
+  height: 180px;
+  right: 50px;
+  top: -90px;
+}
+
+/*---------------- Hero Page  -------------------*/
+
+.hero-container {
+  justify-content: center;
+  background: rgba(89, 219, 219, 0.581);
+  background: linear-gradient(
+    180deg,
+    rgba(89, 219, 219, 0.678) 0%,
+    rgba(255, 255, 255, 1) 100%
+  );
+  margin-bottom: 5rem;
+  display: flex;
+  z-index: 1;
+  position: relative;
+  min-height: 85vh;
+}
+
+.content-wrapper {
+  margin: auto 0;
+  width: 55%;
+}
+
+.img-wrapper {
+  width: 25%;
+  display: flex;
+  align-items: center;
+}
+
+.img-wrapper img {
+  width: 100%;
+}
+
+.fade-in-right {
+  animation: fade-in-right 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+}
+
+.typewriter h1 {
+  font-size: 2.5vw;
+}
+
+@keyframes fade-in-right {
+  0% {
+    transform: translateX(50px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@media (max-width: 990px) {
+  .hero-container {
+    display: block;
+    margin: 0 auto;
+    padding-block: 3rem;
+  }
+  .typewriter h1 {
+    font-size: 4vw;
+  }
+  .content-wrapper {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .hero-subtitle {
+    font-size: 2rem;
+  }
+  .img-wrapper {
+    width: 50vw;
+    min-width: 300px;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 412px) {
+  .hero-container {
     height: auto;
-    bottom: 0;
-    left: 0;
-    padding-top: 50px;
-    position: absolute;
-    right: 0;
-    top: 0;
-    z-index: -2;
-    overflow: hidden;
-    
+    padding-top: 2rem;
   }
-  
-  /* KEYFRAMES */
-  
-  @-webkit-keyframes animateCloud {
-      0% {
-          margin-left: -1000px;
-      }
-      100% {
-          margin-left: 100%;
-      }
+
+  .content-wrapper {
+    border: none;
+    width: 90%;
+    margin: 0 auto;
   }
-  
-  @-moz-keyframes animateCloud {
-      0% {
-          margin-left: -1000px;
-      }
-      100% {
-          margin-left: 100%;
-      }
+
+  .typewriter h1 {
+    width: 90%;
+    font-size: 2rem;
+    display: flex;
+    flex-wrap: wrap;
+    animation: none;
+    white-space: wrap;
+    margin-top: 10px;
   }
-  
-  @keyframes animateCloud {
-      0% {
-          margin-left: -1000px;
-      }
-      100% {
-          margin-left: 100%;
-      }
+
+  .content-wrapper p {
+    font-size: 1.5rem;
+    text-align: justify;
+    margin: 0 auto;
+    margin-top: 10px;
+    line-height: 1.5;
   }
-  
-  /* ANIMATIONS */
-  
-  .x1 {
-    -webkit-animation: animateCloud 35s linear infinite;
-    -moz-animation: animateCloud 35s linear infinite;
-    animation: animateCloud 35s linear infinite;
-    
-    -webkit-transform: scale(0.65);
-    -moz-transform: scale(0.65);
-    transform: scale(0.65);
+
+  .img-wrapper {
+    display: none;
   }
-  
-  .x2 {
-    -webkit-animation: animateCloud 20s linear infinite;
-    -moz-animation: animateCloud 20s linear infinite;
-    animation: animateCloud 20s linear infinite;
-    
-    -webkit-transform: scale(0.3);
-    -moz-transform: scale(0.3);
-    transform: scale(0.3);
-  }
-  
-  .x3 {
-    -webkit-animation: animateCloud 30s linear infinite;
-    -moz-animation: animateCloud 30s linear infinite;
-    animation: animateCloud 30s linear infinite;
-    
-    -webkit-transform: scale(0.5);
-    -moz-transform: scale(0.5);
-    transform: scale(0.5);
-  }
-  
-  .x4 {
-    -webkit-animation: animateCloud 18s linear infinite;
-    -moz-animation: animateCloud 18s linear infinite;
-    animation: animateCloud 18s linear infinite;
-    
-    -webkit-transform: scale(0.4);
-    -moz-transform: scale(0.4);
-    transform: scale(0.4);
-  }
-  
-  .x5 {
-    -webkit-animation: animateCloud 25s linear infinite;
-    -moz-animation: animateCloud 25s linear infinite;
-    animation: animateCloud 25s linear infinite;
-    
-    -webkit-transform: scale(0.55);
-    -moz-transform: scale(0.55);
-    transform: scale(0.55);
-  }
-  
-  /* OBJECTS */
-  
-  .cloud {
-    background: #fff;
-    background: -moz-linear-gradient(top,  #fff 5%, #f1f1f1 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(5%,#fff), color-stop(100%,#f1f1f1));
-    background: -webkit-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
-    background: -o-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
-    background: -ms-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
-    background: linear-gradient(top,  #fff 5%,#f1f1f1 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff', endColorstr='#f1f1f1',GradientType=0 );
-    
-    -webkit-border-radius: 100px;
-    -moz-border-radius: 100px;
-    border-radius: 100px;
-    
-    -webkit-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
-    -moz-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
-    box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
-  
-    height: 120px;
-    position: relative;
-    width: 350px;
-  }
-  
-  .cloud:after, .cloud:before {
-    background: #fff;
-    content: '';
-    position: absolute;
-    z-indeX: -1;
-  }
-  
-  .cloud:after {
-    -webkit-border-radius: 100px;
-    -moz-border-radius: 100px;
-    border-radius: 100px;
-  
-    height: 100px;
-    left: 50px;
-    top: -50px;
-    width: 100px;
-  }
-  
-  .cloud:before {
-    -webkit-border-radius: 200px;
-    -moz-border-radius: 200px;
-    border-radius: 200px;
-  
-    width: 180px;
-    height: 180px;
-    right: 50px;
-    top: -90px;
-  }
+}
